fix(toolbar): resolve tooltip z-index problem

--- a/packages/base-ui/src/Components/Layout/index.module.less
+++ b/packages/base-ui/src/Components/Layout/index.module.less
@@ -15,10 +15,11 @@
 }
 
 .header-wrapper {
+    position: relative;
     flex: 0 0 auto;
     // height: 10%;
-    background: aquamarine;
     user-select: none;
+    z-index: 1;
 }
 
 .footer-wrapper {
