--- a/packages/base-ui/src/Components/Tooltip/index.module.less
+++ b/packages/base-ui/src/Components/Tooltip/index.module.less
@@ -20,7 +20,7 @@
         box-shadow: var(--box-shadow-base);
         border-radius: @border-radius-base;
         font-size: @font-size-base;
-        line-height: 1.5;   
+        line-height: 1.5;
     }
 
     .tooltip-body {
@@ -31,7 +31,6 @@
         &:hover~.tooltip-title {
             position: absolute;
             display: inline-block;
-            z-index: 4;
         }
     }
 }
